# a_maze

./: Makefile  README.md  a_maze_ing.py  get_output_file.py  maze.txt  pyproject.toml
src/: __init__.py  a_maze_ing.py  check_config.py  get_output_file.py
